# smf-cmd

./: Cargo.toml  README.md
src/: arguments.rs  main.rs
src/commands/: disable.rs  enable.rs  list.rs  log.rs  mod.rs  status.rs
src/util/: color_aware_string.rs  mod.rs  smf.rs
