[package]
name = "smf-cmd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "smf"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "3.1.1", features = ["derive"] }
colored = "2.0.4"
exec = "0.3.1"
libcontract = "0.1.0"
regex = "1.9.6"
smf = "0.2.1"
strip-ansi-escapes = "0.2.0"
